# goit_python_core_project_team_11

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-poetry.txt  LICENSE  ListOfCommand.txt  Pipfile  README.md  pyproject-poetry.toml  pyproject-setuptools.toml  pyproject.toml  requirements.txt  setup.cfg  sorting.py
.github/workflows/: python-app.yml
assistant_bot/: DataAddNotes.py  DataNotesTags - Implement.py  DataNotesTags.py  DataNotesTagsImplement.py  TZ(change-notes).py  class_address_book.py  class_assistant_bot.py  class_command_completer.py  class_commands.py  class_commands_handler.py  class_commands_handler_a_book.py  class_commands_handler_notes.py  class_console_output.py  class_fields.py  class_note_record.py  class_note_tags.py  class_notes.py  class_notes_ext.py  class_record.py  main.py  normalize.py  sorting.py
scripts/: assistant_bot_sys.cmd  assistant_bot_venv.cmd  docker_build.cmd  docker_run.cmd  docker_run_multiply.cmd  docker_run_volume.cmd  install_sys.cmd  install_venv.cmd  poetry_add_req.cmd  uninstall_sys.cmd  uninstall_venv.cmd
tests/: Test_folder.rar  assistant_bot_test.py  ex01.py  test_a_bot.py  test_abs.py  user-session-000001_file01
